# Telecommunication-and-Signal-Processing

zad1/: main.py  wiadomosc.txt
zad2/: CMakeLists.txt  da.cbp  da.depend  da.layout  main.cpp  main.py  odebrane.txt  test.txt  test2.txt
zad2/include/: ReaderWriter.h  Receiver.h  Transmitter.h  checksum.h
zad2/src/: ReaderWriter.cpp  Receiver.cpp  Transmitter.cpp  checksum.cpp
zad3/: main.py  message.txt  receiver.py  sender.py
zad4/: converter.py  main.py
